began nav.css styling. ittle ahead of myself: using flex to align contents of nav

--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,28 @@
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
 
-    <!-- External CSS -->
+
+    <!-- External CSS (mara's note: this is the base normalizer...)-->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
 
-    <!-- App CSS -->
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:300,600&display=swap" rel="stylesheet">
+
+    <!-- CSS RULES FOR GOOGLE FONTS: COPY 2 LAYOUT.CSS LATER
+    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Bungee', cursive;
+     -->
+
+    <!-- App CSS (mara's note: that is overridden by our styles!)-->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
-    <!-- External JS -->
+    <!-- navbar CSS -->
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+
+    <!-- External JS (mara's note: the jQuery library) -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
-    <!-- App JS -->
+    <!-- App JS (mara's note: our client!) -->
     <script type="text/javascript" src="/scripts/client.js"></script>
   </head>
 
