finished nav.css for now. rendering issues (mostly to do with pixel size on retina macs)  will need to be solved down the line.

--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,20 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>tweeter</span>
+      <div>
+        <p>Write A New Tweet</p>
+        <p>plchldr</p>
+      </div>
     </nav>
-
+    <header>
+      <div>
+        <img src="/images/profile-hex.png" alt="">
+      </div>
+      <br>
+      <div>
+        <h2>Your Name</h2>
+      </div>
+    </header>
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
   </body>
