--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
     <!-- External JS (mara's note: the jQuery library) -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
+    <!-- ICONIFY: this will come in handy -->
+    <script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
+
     <!-- App JS (mara's note: our client!) -->
     <script type="text/javascript" src="/scripts/client.js"></script>
   </head>
@@ -35,7 +38,7 @@
       <span>tweeter</span>
       <div>
         <p>Write A New Tweet</p>
-        <p>plchldr</p>
+        <span class="iconify" data-icon="mdi-chevron-double-down" data-inline="false"></span>
       </div>
     </nav>
     <header>
