--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
     <!-- navbar CSS -->
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
+    <!-- header CSS -->
+
+    <link rel="stylesheet" href="/styles/header.css" type= "text/css" />
+
     <!-- External JS (mara's note: the jQuery library) -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
@@ -37,7 +41,7 @@
     <nav>
       <span>tweeter</span>
       <div>
-        <p>Write A New Tweet</p>
+        <p><strong>Write</strong> A New Tweet</p>
         <span class="iconify" data-icon="mdi-chevron-double-down" data-inline="false"></span>
       </div>
     </nav>
@@ -47,7 +51,7 @@
       </div>
       <br>
       <div>
-        <h2>Your Name</h2>
+        <h2>Mara Gray</h2>
       </div>
     </header>
     <!-- Page-specific (main) content here -->
