--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,10 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
     <!-- header CSS -->
-
     <link rel="stylesheet" href="/styles/header.css" type= "text/css" />
+
+    <!-- new tweet CSS -->
+    <link rel="stylesheet" href="/styles/new-twit.css" type= "text/css" />
 
     <!-- External JS (mara's note: the jQuery library) -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
@@ -58,11 +60,13 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form action="/tweets/" method="POST">
-          <textarea name="text" placeholder="What are you humming about?"></textarea>
-          <input type="submit" value="Tweet">
-          <span class="counter">140</span>
-        </form>
+        <div class="bleedContainer">
+          <form action="/tweets/" method="POST">
+            <textarea name="text" placeholder="What are you humming about?"></textarea>
+            <input type="submit" value="Tweet">
+            <span class="counter">140</span>
+          </form>
+        </div>
       </section>      
     </main>
   </body>
