--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,9 @@
 
     <!-- App JS (mara's note: our client!) -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+
+    <!-- App JS (mara's note: jQuery experiment!) -->
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
