lil bit of cleanup! and im done 4 the day uwu

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
   </header>
   <!-- Page-specific (main) content here -->
   <main class="container">
-    <div class="bleedContainer">
+    <article class="bleedContainer">
       <!-- <h2>Compose Tweet</h2> -->
       <section class="new-tweet">
         <form action="/tweets/" method="POST">
@@ -75,16 +75,16 @@
         </form>
       </section>
       <section class="feed">
-        <div class="tweet">
+        <article class="tweet">
           <header>
             <div class="userInfo">
               <img src="#" alt="#" class="avatar" />
               <p class="username">effective shitposter</p>
             </div>
-            <p class="userAddress">@dril.or.whatever</p>
+            <p class="userAddress">@irony.poisoned</p>
           </header>
-          <article>
-            <p>amazing, day ruining shitpost</p>
+          <article class="content">
+            <p>i am extremely the queen of post</p>
           </article>
           <footer>
             <p class="date">
@@ -96,7 +96,7 @@
               <a href="#like">like</a>
             </div>
           </footer>
-        </div>
+        </article>
       </section>
     </div>
   </main>
