--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
           <span class="counter">140</span>
         </form>
       </section>
-      <section class="feed">
+      <section class="feed" id="feed">
         <article class="tweet">
           <header>
             <div class="userInfo">
