implemented AJAX functionality in loadTweet and tweetDaemon functions.

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
   <main class="container">
     <article class="bleedContainer">
       <!-- <h2>Compose Tweet</h2> -->
-      <section class="new-tweet">
+      <section class="new-tweet" id="new-tweet">
         <form action="/tweets/" method="POST">
           <textarea name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
