added tweet field toggle. todo: dynamic textarea size

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
   <!-- Top nav bar (fixed) -->
   <nav>
     <span>tweeter</span>
-    <div>
+    <div class="WRITE">
       <p><strong>Write</strong> A New Tweet</p>
       <span class="iconify" data-icon="mdi-chevron-double-down" data-inline="false"></span>
     </div>
