commented out placeholder new-tweet

--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,7 @@
         </form>
       </section>
       <section class="feed" id="feed">
+      <!-- EXAMPLE TWEET vvvv
         <article class="tweet">
           <header>
             <div class="userInfo">
@@ -96,7 +97,8 @@
               <a href="#like">like</a>
             </div>
           </footer>
-        </article>
+        </article> 
+      FOR REFERENCE ONLY ^^^^-->
       </section>
     </div>
   </main>
