fixed a semantic html error

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
   </header>
   <!-- Page-specific (main) content here -->
   <main class="container">
-    <article class="bleedContainer">
+    <div class="bleedContainer">
       <!-- <h2>Compose Tweet</h2> -->
       <section class="new-tweet" id="new-tweet">
         <form action="/tweets/" method="POST">
