css cleanup: added error message div

--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,10 @@
     <div class="bleedContainer">
       <!-- <h2>Compose Tweet</h2> -->
       <section class="new-tweet" id="new-tweet">
+        <div class="error">
+          <!-- iconify span goes here -->
+          <!-- error <p> goes here -->
+        </div>
         <form action="/tweets/" method="POST">
           <textarea name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
