1: lots of changes: added error message which displays on invalid entry 2: character counter now properly resets to 140 3: textarea now properly clears on successful submit

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
       <!-- <h2>Compose Tweet</h2> -->
       <div class="error">
         <span class="iconify" data-icon="bx:bx-error" data-inline="false"></span>
-        <p class="error-message"></p>
+        <p class="error-message">ERROR</p>
       </div>
       <section class="new-tweet" id="new-tweet">
         <form action="/tweets/" method="POST">
