--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
       </div>
       <section class="new-tweet" id="new-tweet">
         <form action="/tweets/" method="POST">
-          <textarea name="text" placeholder="What are you humming about?"></textarea>
+          <textarea rows="2" name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet" class="invalid">
           <span class="counter">140</span>
         </form>
