applied position:sticky to header
it looks amazing now

started desktop.css for responsive styling

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
       <img src="/images/profile-hex.png" alt="">
     </div>
     <br>
-    <div>
+    <div class="name">
       <h2><strong>Mara</strong> Gray</h2>
     </div>
   </header>
