been a while! updated responsive design for sub-ipad width

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
 <body>
   <!-- Top nav bar (fixed) -->
   <nav>
-    <span>tweeter</span>
+    <span class="logo">tweeter</span>
     <div class="WRITE">
       <p><strong>Write</strong> A New Tweet</p>
       <span class="iconify" data-icon="mdi-chevron-double-down" data-inline="false"></span>
