moved tablet styles into their own css file (tablet.css)

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,9 @@
   <!-- Responsive Desktop sheet -->
   <link rel="stylesheet" href="/styles/desktop.css" type="text/css" />
 
+  <!-- Responsive Tablet sheet -->
+  <link rel="stylesheet" href="/styles/tablet.css" type="text/css" />
+
   <!-- External JS (mara's note: the jQuery library) -->
   <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
